AG-2442 - fixed header icon spacing for RTL and RTL example

--- a/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
+++ b/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
@@ -1289,9 +1289,6 @@
         }
 
         .ag-header-cell-label {
-            float: right;
-            width: calc(100% - #{$icon-size});
-
             & > span {
                 float: right;
             }
